# module-experiments

./: .gitignore  Makefile  Readme.md  biblio.bib
diffing/: aux.tex  big_alphabet.ml  diff.bib  mlworkshop.tex  presentation.tex  test_add.ml  test_change.ml
diffing/tests/: alphabet.ml  test.ml  variadic.ml
incr/: .gitignore  intro.tex  main.tex  ml.tex  motivation.tex  notations.tex  remarks_leo.md  rules.tex  slides.tex
incr-proto/: core.ml  core.mli  core_check.ml  core_check.mli  core_printer.ml  core_printer.mli  core_subst.ml  core_subst.mli  core_types.ml  dune  env.ml  env.mli  env_initial.ml  ident.ml  ident.mli  incrml.ml  incrml.opam  lexer.mli  lexer.mll  main.ml  modules.ml  modules_op.ml  parser.mly  parsetree.ml  printer.ml  printer.mli  subst.ml  subst.mli  subtyping.ml  types.ml  types.mli  typing.ml  validity.ml
incr-proto/examples/: basics.ml
incr-proto/tests/: app_avoidance.ml  basics.ml  core_terms.ml  core_types.ml  dune  functor_alias.ml
incr/theory/: additionals.tex  enrich.tex  grammar.tex  incrrules.tex  lookup.tex  strengthen.tex  subst.tex  subtyping.tex  transp.tex  typing.tex  validity.tex
intro/: demo_final.ml  demo_final2.ml  demo_pic.ml  demo_stack.ml  demosource.ml  dune  lego.tex  plain-short.bst  slides.tex
