(library
 (name incrml)
 (modules :standard \ main)
 (libraries fmt containers rresult peahell)
 (flags -open Peahell)
)

(executable
 (name main)
 (public_name incrml)
 (modules main)
 (libraries incrml peahell.native)
) 

(ocamllex
 (modules lexer)
)

(menhir
 (modules parser)
 (flags --explain)
)
